--- a/index.html
+++ b/index.html
@@ -1,46 +1,49 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>PINGPONG</title>
-    <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <script src "js/jquery-3.1.1.js"></script>
-    <script src "js/scripts.js">
 
-    </script>
+<head>
+  <meta charset="utf-8">
+  <title>PINGPONG</title>
+  <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <script src="js/jquery-3.1.1.js"></script>
+  <script src="js/scripts.js">
+  </script>
 
 
-  </head>
-  <body>
+</head>
 
-    <div class="jumbotron">
-      <h1><strong><u>PING-PONG</u></strong></h1>
-      <p><strong>The Numbers Game</strong></p>
+<body>
+
+  <div class="jumbotron">
+    <h1><strong><u>PING-PONG</u></strong></h1>
+    <p><strong>The Numbers Game</strong></p>
+
+  </div>
+
+  <div class="play">
+    <h2><strong>Let's Play</strong></h2>
+    <h3><strong>Rules</strong></h3>
+    <p>Ping Pong will count up to your number from 1 with the following exceptions:</p>
+    <ol>
+      <li>Numbers divisible by 3 become "ping"</li>
+      <li>Numbers divisible by 5 become "pong"</li>
+      <li>Numbers divisible by 3 and 5 become "pingpong"</li>
+    </ol>
+    <form id="ping-pong" class="form-inline">
+      <div class="form-group">
+        <label for="subscription">Enter number here</label>
+        <input type="text" class="form-control" id="number">
+        <button type="submit" class="btn btn">pingpong!!!</button>
+      </div>
+    </form>
+    <div id="results" class="container">
+      <ul id="list">
+
+      </ul>
 
     </div>
 
-    <div class="play">
-      <h2><strong>Let's Play</strong></h2>
-      <h3><strong>Rules</strong></h3>
-      <p>Ping Pong will count up to your number from 1 with the following exceptions:</p>
-      <ol>
-        <li>Numbers divisible by 3 become "ping"</li>
-        <li>Numbers divisible by 5 become "pong"</li>
-        <li>Numbers divisible by 3 and 5 become "pingpong"</li>
-      </ol>
-      <form class="form-inline">
-                <div class="form-group">
-                    <label for="subscription">Enter number here</label>
-                    <input type="text" class="form-control" id="subscription">
-                    <button type="pingpong!!" class="btn btn">pingpong!!!</button>
-
-
-
-
-
-    </div>
-
-  </body>
+</body>
 
 </html>
