--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>PINGPONG</title>
-  <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/styles.css">
   <script src="js/jquery-3.1.1.js"></script>
   <script src="js/scripts.js">
@@ -30,11 +30,18 @@
       <li>Numbers divisible by 5 become "pong"</li>
       <li>Numbers divisible by 3 and 5 become "pingpong"</li>
     </ol>
+
+    <h3><strong>Instructions</strong></h3>
+    <ul>
+      <li>Enter any number in the form </li>
+      <li>Click the 'click me' button and see what happens</li>
+    </ul>
+
     <form id="ping-pong" class="form-inline">
       <div class="form-group">
         <label for="subscription">Enter number here</label>
         <input type="text" class="form-control" id="number">
-        <button type="submit" class="btn btn">pingpong!!!</button>
+        <button type="submit" class="btn btn">click me</button>
       </div>
     </form>
     <div id="results" class="container">
