Add twitter and github icons

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>PINGPONG</title>
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="vendor/font-awesome-4.7.0/css/font-awesome.css">
+  <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
   <script src="js/jquery-3.1.1.js"></script>
   <script src="js/scripts.js">
   </script>
@@ -14,28 +17,29 @@
 </head>
 
 <body>
-
+  <!--Begining of Jumbotron  -->
   <div class="jumbotron">
     <h1><strong><u>PING-PONG</u></strong></h1>
     <p><strong>The Numbers Game</strong></p>
 
   </div>
+  <!--end of jumbotron  -->
 
   <div class="play">
     <h2><strong>Let's Play</strong></h2>
     <h3><strong>Rules</strong></h3>
     <p>Ping Pong will count up to your number from 1 with the following exceptions:</p>
-    <ol>
-      <li>Numbers divisible by 3 become "ping"</li>
-      <li>Numbers divisible by 5 become "pong"</li>
-      <li>Numbers divisible by 3 and 5 become "pingpong"</li>
-    </ol>
+
+    <li>Numbers divisible by 3 become "ping"</li>
+    <li>Numbers divisible by 5 become "pong"</li>
+    <li>Numbers divisible by 3 and 5 become "pingpong"</li>
+
 
     <h3><strong>Instructions</strong></h3>
-    <ul>
-      <li>Enter any number in the form </li>
-      <li>Click the 'click me' button and see what happens</li>
-    </ul>
+
+    <li>Enter any number in the form </li>
+    <li>Click the 'click me' button and see what happens</li>
+
 
     <form id="ping-pong" class="form-inline">
       <div class="form-group">
@@ -48,6 +52,18 @@
       <ul id="list">
 
       </ul>
+
+    </div>
+
+    <div class="emoji">
+      <i class="em em-100 em-3x"></i>
+    </div>
+
+    <div class="footer">
+      <p><strong>Developed by Steve Kiarie</strong></p>
+      <a href="https://twitter.com/Iam_Kiarie"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
+      <a href="https://github.com/stvkre"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+
 
     </div>
 
