--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="vendor/font-awesome-4.7.0/css/font-awesome.css">
   <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
   <script src="js/jquery-3.1.1.js"></script>
   <script src="js/scripts.js">
   </script>
